# NiceRender-DesignPatterns

./: README.md
C++/: .gitignore  CMakeLists.txt
C++/source/abstract_factory/: abstract_factory.cpp
C++/source/adapter/: adapter.cpp
C++/source/bridge/: bridge.cpp
C++/source/builder/: builder.cpp
C++/source/chain_of_responsibility/: chain_of_responsibility.cpp
C++/source/command/: command.cpp
C++/source/composite/: composite.cpp
C++/source/decorator/: decorator.cpp
C++/source/facade/: facade.cpp
C++/source/factory_method/: factory_method.cpp
C++/source/flyweight/: flyweight.cpp
C++/source/iterator/: iterator.cpp
C++/source/memento/: memento.cpp
C++/source/observer/: observer.cpp
C++/source/prototype/: prototype.cpp
C++/source/proxy/: proxy.cpp
C++/source/singleton/: singleton.cpp
C++/source/state/: main.cpp  music_player.cpp  music_player.h  music_player_state.cpp  music_player_state.h
C++/source/strategy/: strategy.cpp
